--- a/app/globals.css
+++ b/app/globals.css
@@ -2,70 +2,62 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
-  }
-  .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
+body {
+  overflow-x: hidden;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.glassmorphism {
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+body::-webkit-scrollbar {
+  width: 11px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: white;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #F54748;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid white;  /* creates padding around scroll thumb */
 }
 
 @layer utilities {
   .input-class {
-    @apply text-16 placeholder:text-16 rounded-lg border border-gray-300 text-gray-900 placeholder:text-gray-500;
+    @apply text-14 placeholder:text-12 md:placeholder:text-16 h-[2rem] md:h-[3rem] rounded-full border border-dark/60 focus:border-primary text-gray-900 placeholder:text-gray-500;
   }
+
+  .cards {
+    @apply flex flex-col items-center justify-center space-y-4 p-1 w-[18rem] h-[24rem] md:h-[21rem] md:w-[18rem] bg-gradient-to-b from-white to-[#f54748]/30 rounded-[20px]
+  }
+
+  .box {
+    @apply h-[570px] w-[570px]
+  }
+  .ellipse {
+    @apply h-[570px] w-[560px] relative md:mx-[-3rem] md:top-[-8.5rem]
+ }
 
   .sheet-content button {
     @apply focus:ring-0 focus-visible:ring-transparent focus:ring-offset-0 focus-visible:ring-offset-0 focus-visible:outline-none focus-visible:border-none !important;
@@ -80,35 +72,47 @@ body {
   }
 
   .header-2 {
-    @apply text-18 font-semibold text-gray-900;
+    @apply md:text-[3rem] 2xl:text-[3rem] 2xl:w-[40rem] capitalize w-[14rem] text-[2rem] md:w-[22rem] font-sofiaSansCondenced font-semibold;
+  }
+
+  .btn {
+    @apply rounded-full text-12 md:text-16 text-light font-bold py-2 px-4 w-full sm:w-[auto]
+  }
+
+  .btn-text {
+    @apply text-dark bg-transparent hover:bg-none text-12 md:text-16 whitespace-nowrap
+  }
+
+  .header-3 {
+    @apply md:text-[3rem] text-center md:w-full w-[14rem] capitalize text-[2rem] 2xl:text-[2rem] font-sofiaSansCondenced font-semibold;
   }
 
   .text-10 {
-    @apply text-[10px] leading-[14px];
+    @apply text-[10px] leading-[14px] font-sofiaSans;
   }
 
   .text-12 {
-    @apply text-[12px] leading-[16px];
+    @apply text-[12px] leading-[16px] font-sofiaSans;
   }
 
   .text-14 {
-    @apply text-[14px] leading-[20px];
+    @apply text-[14px] leading-[20px] font-sofiaSans;
   }
 
   .text-16 {
-    @apply text-[16px] leading-[24px];
+    @apply text-[16px] leading-[24px] font-sofiaSans;
   }
 
   .text-18 {
-    @apply text-[18px] leading-[22px];
+    @apply text-[18px] leading-[22px] font-sofiaSans;
   }
 
   .text-20 {
-    @apply text-[20px] leading-[24px];
+    @apply text-[20px] leading-[24px] font-sofiaSans;
   }
 
   .text-24 {
-    @apply text-[24px] leading-[30px];
+    @apply text-[24px] leading-[30px] font-sofiaSans;
   }
 
   .text-26 {
@@ -121,6 +125,15 @@ body {
 
   .text-36 {
     @apply text-[36px] leading-[44px];
+  }
+
+  /* Hero */
+  .hero {
+    @apply min-h-screen w-full mt-4 p-[0.5rem] md:container
+  }
+  
+  .hero-image {
+    @apply  md:h-[88vh] md:w-[100vw] md:mb-[2vh]
   }
 
   /* profile */
